IConfucius can be prompted in Chinese and generates a Chinese quote

--- a/scripts/prompt-design-english.ipynb
+++ b/scripts/prompt-design-english.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IConfucius prompt design for llama_cpp_canister"
+    "# IConfucius prompt design for llama_cpp_canister\n",
+    "\n",
+    "## English version"
    ]
   },
   {
@@ -388,9 +390,6 @@
     "\n",
     "# lama.cpp git sha 615212 is used by current version of llama_cpp_canister\n",
     "LLAMA_CLI_PATH = \"../../ggml_org_llama_615212.cpp/build/bin/llama-cli\"\n",
-    "\n",
-    "# lama.cpp git sha b841d0 was previous version used by llama_cpp_canister\n",
-    "# LLAMA_CLI_PATH = \"../../ggml_org_llama_b841d0.cpp/llama-cli\"\n",
     "\n",
     "\n",
     "# ####################################################################### #\n",
