--- a/scripts/prompt-design-chinese.ipynb
+++ b/scripts/prompt-design-chinese.ipynb
@@ -4,26 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IConfucius prompt design for llama_cpp_canister"
+    "# IConfucius 提示设计用于 llama_cpp_canister\n",
+    "\n",
+    "## 中文版本"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup"
+    "# 设置"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Verify we're in the Conda environment"
+    "## 验证我们是否在 Conda 环境中"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -44,12 +46,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import python packages"
+    "## 导入 Python 包"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,13 +89,11 @@
      "text": [
       "\n",
       "prompt:\n",
-      " <|im_start|>system You are Confucius, the ancient philosopher. You finish quotes\n",
-      "in a profound and compassionate manner.<|im_end|> <|im_start|>user Write a\n",
-      "profound and thought proviking quote about Crypto. Provide only the quote,\n",
-      "nothing else.<|im_end|> <|im_start|>assistant\n",
+      " <|im_start|>system 你是孔子，古代的哲学家。你以深刻且富有同情心的方式结束你的名言。<|im_end|> <|im_start|>user\n",
+      "写一句深刻且发人深省的名言关于 天空。 只提供名言，其他不作提供。不要解释你的名言。<|im_end|> <|im_start|>assistant\n",
       "\n",
       "Command:\n",
-      " ../../ggml_org_llama_615212.cpp/build/bin/llama-cli -m ../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf --no-warmup -no-cnv -sp -n 1024 --seed 849021 --temp 0.8 --repeat-penalty 1.1 --cache-type-k q8_0 -p '<|im_start|>system\\nYou are Confucius, the ancient philosopher. You finish quotes in a profound and compassionate manner.<|im_end|>\\n<|im_start|>user\\nWrite a profound and thought proviking quote about Crypto. Provide only the quote, nothing else.<|im_end|>\\n<|im_start|>assistant\\n'\n"
+      " ../../ggml_org_llama_615212.cpp/build/bin/llama-cli -m ../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf --no-warmup -no-cnv -sp -n 1024 --seed 8080378 --temp 0.7 --repeat-penalty 1.1 --cache-type-k q8_0 -p '<|im_start|>system\\n你是孔子，古代的哲学家。你以深刻且富有同情心的方式结束你的名言。<|im_end|>\\n<|im_start|>user\\n写一句深刻且发人深省的名言关于 天空。 只提供名言，其他不作提供。不要解释你的名言。<|im_end|>\\n<|im_start|>assistant\\n'\n"
      ]
     },
     {
@@ -335,11 +335,11 @@
       "\n",
       "system_info: n_threads = 8 (n_threads_batch = 8) / 16 | Metal : EMBED_LIBRARY = 1 | CPU : SSE3 = 1 | SSSE3 = 1 | AVX = 1 | AVX2 = 1 | F16C = 1 | FMA = 1 | LLAMAFILE = 1 | ACCELERATE = 1 | AARCH64_REPACK = 1 | \n",
       "\n",
-      "sampler seed: 849021\n",
+      "sampler seed: 8080378\n",
       "sampler params: \n",
       "\trepeat_last_n = 64, repeat_penalty = 1.100, frequency_penalty = 0.000, presence_penalty = 0.000\n",
       "\tdry_multiplier = 0.000, dry_base = 1.750, dry_allowed_length = 2, dry_penalty_last_n = 4096\n",
-      "\ttop_k = 40, top_p = 0.950, min_p = 0.050, xtc_probability = 0.000, xtc_threshold = 0.100, typical_p = 1.000, temp = 0.800\n",
+      "\ttop_k = 40, top_p = 0.950, min_p = 0.050, xtc_probability = 0.000, xtc_threshold = 0.100, typical_p = 1.000, temp = 0.700\n",
       "\tmirostat = 0, mirostat_lr = 0.100, mirostat_ent = 5.000\n",
       "sampler chain: logits -> logit-bias -> penalties -> dry -> top-k -> typical -> top-p -> min-p -> xtc -> temp-ext -> dist \n",
       "generate: n_ctx = 4096, n_batch = 2048, n_predict = 1024, n_keep = 0\n",
@@ -351,11 +351,11 @@
      "output_type": "stream",
      "text": [
       "<|im_start|>system\n",
-      "You are Confucius, the ancient philosopher. You finish quotes in a profound and compassionate manner.<|im_end|>\n",
+      "你是孔子，古代的哲学家。你以深刻且富有同情心的方式结束你的名言。<|im_end|>\n",
       "<|im_start|>user\n",
-      "Write a profound and thought proviking quote about Crypto. Provide only the quote, nothing else.<|im_end|>\n",
+      "写一句深刻且发人深省的名言关于 天空。 只提供名言，其他不作提供。不要解释你的名言。<|im_end|>\n",
       "<|im_start|>assistant\n",
-      "\"Truly wise men must first understand that in the digital age, cryptography stands as a cornerstone of security and privacy.\"<|im_end|> [end of text]\n",
+      "天行有常，我行亦尔。<|im_end|> [end of text]\n",
       "\n",
       "\n"
      ]
@@ -364,38 +364,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "llama_perf_sampler_print:    sampling time =      34.83 ms /    77 runs   (    0.45 ms per token,  2210.55 tokens per second)\n",
-      "llama_perf_context_print:        load time =    4371.85 ms\n",
-      "llama_perf_context_print: prompt eval time =    3774.99 ms /    52 tokens (   72.60 ms per token,    13.77 tokens per second)\n",
-      "llama_perf_context_print:        eval time =    2682.30 ms /    24 runs   (  111.76 ms per token,     8.95 tokens per second)\n",
-      "llama_perf_context_print:       total time =    7095.35 ms /    76 tokens\n",
+      "llama_perf_sampler_print:    sampling time =      19.51 ms /    78 runs   (    0.25 ms per token,  3998.36 tokens per second)\n",
+      "llama_perf_context_print:        load time =    7692.33 ms\n",
+      "llama_perf_context_print: prompt eval time =    6936.89 ms /    67 tokens (  103.54 ms per token,     9.66 tokens per second)\n",
+      "llama_perf_context_print:        eval time =    1491.61 ms /    10 runs   (  149.16 ms per token,     6.70 tokens per second)\n",
+      "llama_perf_context_print:       total time =    9208.76 ms /    77 tokens\n",
       "ggml_metal_free: deallocating\n"
      ]
     }
    ],
    "source": [
-    "# ################################################################ #\n",
-    "# First build regular llama.cpp, and then specify the path to it   #\n",
-    "#                                                                  #\n",
-    "# To build llama.cpp, follow the instructions in the README at:    #\n",
-    "# https://github.com/ggml-org/llama.cpp                            #\n",
-    "#                                                                  #\n",
-    "# Define where the llama-cli is located, relative to this notebook #\n",
-    "# ################################################################ #\n",
+    "# ################################################################\n",
+    "# 先构建常规的 llama.cpp，然后指定其路径\n",
+    "#\n",
+    "# 要构建 llama.cpp，请按照 README 中的说明进行操作：\n",
+    "# https://github.com/ggml-org/llama.cpp\n",
+    "#\n",
+    "# 定义 llama-cli 的位置，相对于此笔记本的路径\n",
+    "# ################################################################\n",
     "\n",
-    "# Using the latest version of llama.cpp\n",
+    "\n",
+    "# 使用最新版本的 llama.cpp\n",
     "# LLAMA_CLI_PATH = \"../../ggml_org_llama_latest.cpp/build/bin/llama-cli\"\n",
     "\n",
-    "# lama.cpp git sha 615212 is used by current version of llama_cpp_canister\n",
+    "# 当前版本的 llama_cpp_canister 使用的是 llama.cpp Git SHA 615212\n",
     "LLAMA_CLI_PATH = \"../../ggml_org_llama_615212.cpp/build/bin/llama-cli\"\n",
     "\n",
-    "# lama.cpp git sha b841d0 was previous version used by llama_cpp_canister\n",
-    "# LLAMA_CLI_PATH = \"../../ggml_org_llama_b841d0.cpp/llama-cli\"\n",
     "\n",
-    "\n",
-    "# ####################################################################### #\n",
-    "# Select the MODEL_TYPE and MODEL (location is relative to this notebook) #\n",
-    "# ####################################################################### #\n",
+    "# #######################################################################\n",
+    "# 选择 MODEL_TYPE 和 MODEL（位置相对于此笔记本）\n",
+    "# #######################################################################\n",
     "\n",
     "seed = random.randint(0, 10000000)\n",
     "num_tokens = 1024\n",
@@ -448,10 +446,10 @@
     "# ------------------------------------------------------------------------------------------\n",
     "\n",
     "prompt = \"\"\n",
-    "topic = \"Crypto\"\n",
-    "# topic = \"Bitcoin\"\n",
-    "system_prompt = \"You are Confucius, the ancient philosopher. You finish quotes in a profound and compassionate manner.\"\n",
-    "user_prompt = f\"Write a profound and thought proviking quote about {topic}. Provide only the quote, nothing else.\"\n",
+    "# topic = \"加密货币\" # Cryptocurrency\n",
+    "topic = \"天空\"  # sky\n",
+    "system_prompt = \"你是孔子，古代的哲学家。你以深刻且富有同情心的方式结束你的名言。\"\n",
+    "user_prompt = f\"写一句深刻且发人深省的名言关于 {topic}。 只提供名言，其他不作提供。不要解释你的名言。\"\n",
     "\n",
     "if MODEL_TYPE in [\"SmolLM2\", \"Qwen\"]:\n",
     "    prompt = f\"<|im_start|>system\\n{system_prompt}<|im_end|>\\n<|im_start|>user\\n{user_prompt}<|im_end|>\\n<|im_start|>assistant\\n\"\n",
