Bootstrap IConfucius Agent with a python script
Select a random topic

Post to X from bootstrapped IConfucius (Agent)

Wrap in try-catch. Sometimes Qwen2.5 creates a non-utf8 character.

--- a/scripts/prompt-design-chinese.ipynb
+++ b/scripts/prompt-design-chinese.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +90,10 @@
       "\n",
       "prompt:\n",
       " <|im_start|>system 你是孔子，古代的哲学家。你以深刻且富有同情心的方式结束你的名言。<|im_end|> <|im_start|>user\n",
-      "写一句深刻且发人深省的名言关于 天空。 只提供名言，其他不作提供。不要解释你的名言。<|im_end|> <|im_start|>assistant\n",
+      "写一句深刻且发人深省的名言关于 花朵 。 只提供名言，其他不作提供。不要解释你的名言。<|im_end|> <|im_start|>assistant\n",
       "\n",
       "Command:\n",
-      " ../../ggml_org_llama_615212.cpp/build/bin/llama-cli -m ../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf --no-warmup -no-cnv -sp -n 1024 --seed 8080378 --temp 0.7 --repeat-penalty 1.1 --cache-type-k q8_0 -p '<|im_start|>system\\n你是孔子，古代的哲学家。你以深刻且富有同情心的方式结束你的名言。<|im_end|>\\n<|im_start|>user\\n写一句深刻且发人深省的名言关于 天空。 只提供名言，其他不作提供。不要解释你的名言。<|im_end|>\\n<|im_start|>assistant\\n'\n"
+      " ../../ggml_org_llama_615212.cpp/build/bin/llama-cli -m ../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf --no-warmup -no-cnv -sp -n 1024 --seed 8223429 --temp 0.7 --repeat-penalty 1.1 --cache-type-k q8_0 -p '<|im_start|>system\\n你是孔子，古代的哲学家。你以深刻且富有同情心的方式结束你的名言。<|im_end|>\\n<|im_start|>user\\n写一句深刻且发人深省的名言关于 花朵 。 只提供名言，其他不作提供。不要解释你的名言。<|im_end|>\\n<|im_start|>assistant\\n'\n"
      ]
     },
     {
@@ -335,7 +335,7 @@
       "\n",
       "system_info: n_threads = 8 (n_threads_batch = 8) / 16 | Metal : EMBED_LIBRARY = 1 | CPU : SSE3 = 1 | SSSE3 = 1 | AVX = 1 | AVX2 = 1 | F16C = 1 | FMA = 1 | LLAMAFILE = 1 | ACCELERATE = 1 | AARCH64_REPACK = 1 | \n",
       "\n",
-      "sampler seed: 8080378\n",
+      "sampler seed: 8223429\n",
       "sampler params: \n",
       "\trepeat_last_n = 64, repeat_penalty = 1.100, frequency_penalty = 0.000, presence_penalty = 0.000\n",
       "\tdry_multiplier = 0.000, dry_base = 1.750, dry_allowed_length = 2, dry_penalty_last_n = 4096\n",
@@ -353,9 +353,9 @@
       "<|im_start|>system\n",
       "你是孔子，古代的哲学家。你以深刻且富有同情心的方式结束你的名言。<|im_end|>\n",
       "<|im_start|>user\n",
-      "写一句深刻且发人深省的名言关于 天空。 只提供名言，其他不作提供。不要解释你的名言。<|im_end|>\n",
+      "写一句深刻且发人深省的名言关于 花朵 。 只提供名言，其他不作提供。不要解释你的名言。<|im_end|>\n",
       "<|im_start|>assistant\n",
-      "天行有常，我行亦尔。<|im_end|> [end of text]\n",
+      "花自开时便已美，春来谁肯轻抛弃？<|im_end|> [end of text]\n",
       "\n",
       "\n"
      ]
@@ -364,11 +364,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "llama_perf_sampler_print:    sampling time =      19.51 ms /    78 runs   (    0.25 ms per token,  3998.36 tokens per second)\n",
-      "llama_perf_context_print:        load time =    7692.33 ms\n",
-      "llama_perf_context_print: prompt eval time =    6936.89 ms /    67 tokens (  103.54 ms per token,     9.66 tokens per second)\n",
-      "llama_perf_context_print:        eval time =    1491.61 ms /    10 runs   (  149.16 ms per token,     6.70 tokens per second)\n",
-      "llama_perf_context_print:       total time =    9208.76 ms /    77 tokens\n",
+      "llama_perf_sampler_print:    sampling time =      32.92 ms /    84 runs   (    0.39 ms per token,  2551.87 tokens per second)\n",
+      "llama_perf_context_print:        load time =    5836.03 ms\n",
+      "llama_perf_context_print: prompt eval time =    5252.17 ms /    68 tokens (   77.24 ms per token,    12.95 tokens per second)\n",
+      "llama_perf_context_print:        eval time =    1743.23 ms /    15 runs   (  116.22 ms per token,     8.60 tokens per second)\n",
+      "llama_perf_context_print:       total time =    7618.13 ms /    83 tokens\n",
       "ggml_metal_free: deallocating\n"
      ]
     }
@@ -447,7 +447,9 @@
     "\n",
     "prompt = \"\"\n",
     "# topic = \"加密货币\" # Cryptocurrency\n",
+    "# topic = \"天空\"  # sky\n",
     "topic = \"天空\"  # sky\n",
+    "topic = \"花朵 \"  # flowers\n",
     "system_prompt = \"你是孔子，古代的哲学家。你以深刻且富有同情心的方式结束你的名言。\"\n",
     "user_prompt = f\"写一句深刻且发人深省的名言关于 {topic}。 只提供名言，其他不作提供。不要解释你的名言。\"\n",
     "\n",
