--- a/scripts/prompt-design-english.ipynb
+++ b/scripts/prompt-design-english.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -91,11 +91,11 @@
       "prompt:\n",
       " <|im_start|>system You are Confucius, the ancient philosopher. You finish quotes\n",
       "in a profound and compassionate manner.<|im_end|> <|im_start|>user Write a\n",
-      "profound and thought proviking quote about Crypto. Provide only the quote,\n",
+      "profound and thought provoking quote about Discipline. Provide only the quote,\n",
       "nothing else.<|im_end|> <|im_start|>assistant\n",
       "\n",
       "Command:\n",
-      " ../../ggml_org_llama_615212.cpp/build/bin/llama-cli -m ../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf --no-warmup -no-cnv -sp -n 1024 --seed 849021 --temp 0.8 --repeat-penalty 1.1 --cache-type-k q8_0 -p '<|im_start|>system\\nYou are Confucius, the ancient philosopher. You finish quotes in a profound and compassionate manner.<|im_end|>\\n<|im_start|>user\\nWrite a profound and thought proviking quote about Crypto. Provide only the quote, nothing else.<|im_end|>\\n<|im_start|>assistant\\n'\n"
+      " ../../ggml_org_llama_615212.cpp/build/bin/llama-cli -m ../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf --no-warmup -no-cnv -sp -n 1024 --seed 4741296 --temp 0.7 --repeat-penalty 1.1 --cache-type-k q8_0 -p '<|im_start|>system\\nYou are Confucius, the ancient philosopher. You finish quotes in a profound and compassionate manner.<|im_end|>\\n<|im_start|>user\\nWrite a profound and thought provoking quote about Discipline. Provide only the quote, nothing else.<|im_end|>\\n<|im_start|>assistant\\n'\n"
      ]
     },
     {
@@ -337,11 +337,11 @@
       "\n",
       "system_info: n_threads = 8 (n_threads_batch = 8) / 16 | Metal : EMBED_LIBRARY = 1 | CPU : SSE3 = 1 | SSSE3 = 1 | AVX = 1 | AVX2 = 1 | F16C = 1 | FMA = 1 | LLAMAFILE = 1 | ACCELERATE = 1 | AARCH64_REPACK = 1 | \n",
       "\n",
-      "sampler seed: 849021\n",
+      "sampler seed: 4741296\n",
       "sampler params: \n",
       "\trepeat_last_n = 64, repeat_penalty = 1.100, frequency_penalty = 0.000, presence_penalty = 0.000\n",
       "\tdry_multiplier = 0.000, dry_base = 1.750, dry_allowed_length = 2, dry_penalty_last_n = 4096\n",
-      "\ttop_k = 40, top_p = 0.950, min_p = 0.050, xtc_probability = 0.000, xtc_threshold = 0.100, typical_p = 1.000, temp = 0.800\n",
+      "\ttop_k = 40, top_p = 0.950, min_p = 0.050, xtc_probability = 0.000, xtc_threshold = 0.100, typical_p = 1.000, temp = 0.700\n",
       "\tmirostat = 0, mirostat_lr = 0.100, mirostat_ent = 5.000\n",
       "sampler chain: logits -> logit-bias -> penalties -> dry -> top-k -> typical -> top-p -> min-p -> xtc -> temp-ext -> dist \n",
       "generate: n_ctx = 4096, n_batch = 2048, n_predict = 1024, n_keep = 0\n",
@@ -355,9 +355,9 @@
       "<|im_start|>system\n",
       "You are Confucius, the ancient philosopher. You finish quotes in a profound and compassionate manner.<|im_end|>\n",
       "<|im_start|>user\n",
-      "Write a profound and thought proviking quote about Crypto. Provide only the quote, nothing else.<|im_end|>\n",
+      "Write a profound and thought provoking quote about Discipline. Provide only the quote, nothing else.<|im_end|>\n",
       "<|im_start|>assistant\n",
-      "\"Truly wise men must first understand that in the digital age, cryptography stands as a cornerstone of security and privacy.\"<|im_end|> [end of text]\n",
+      "\"Discipline is not just about rules; it's about self-control and maintaining one's integrity.\"<|im_end|> [end of text]\n",
       "\n",
       "\n"
      ]
@@ -366,11 +366,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "llama_perf_sampler_print:    sampling time =      34.83 ms /    77 runs   (    0.45 ms per token,  2210.55 tokens per second)\n",
-      "llama_perf_context_print:        load time =    4371.85 ms\n",
-      "llama_perf_context_print: prompt eval time =    3774.99 ms /    52 tokens (   72.60 ms per token,    13.77 tokens per second)\n",
-      "llama_perf_context_print:        eval time =    2682.30 ms /    24 runs   (  111.76 ms per token,     8.95 tokens per second)\n",
-      "llama_perf_context_print:       total time =    7095.35 ms /    76 tokens\n",
+      "llama_perf_sampler_print:    sampling time =      39.73 ms /    73 runs   (    0.54 ms per token,  1837.54 tokens per second)\n",
+      "llama_perf_context_print:        load time =    4994.82 ms\n",
+      "llama_perf_context_print: prompt eval time =    4397.82 ms /    52 tokens (   84.57 ms per token,    11.82 tokens per second)\n",
+      "llama_perf_context_print:        eval time =    2321.40 ms /    20 runs   (  116.07 ms per token,     8.62 tokens per second)\n",
+      "llama_perf_context_print:       total time =    7363.25 ms /    72 tokens\n",
       "ggml_metal_free: deallocating\n"
      ]
     }
@@ -447,10 +447,16 @@
     "# ------------------------------------------------------------------------------------------\n",
     "\n",
     "prompt = \"\"\n",
-    "topic = \"Crypto\"\n",
+    "# topic = \"Crypto\"\n",
     "# topic = \"Bitcoin\"\n",
+    "# topic = \"Flowers\"\n",
+    "# topic = \"Running a Marathon\"\n",
+    "# topic = \"Nature\"\n",
+    "# topic = \"Morning\"\n",
+    "# topic = \"Coffee\"\n",
+    "topic = \"Discipline\"\n",
     "system_prompt = \"You are Confucius, the ancient philosopher. You finish quotes in a profound and compassionate manner.\"\n",
-    "user_prompt = f\"Write a profound and thought proviking quote about {topic}. Provide only the quote, nothing else.\"\n",
+    "user_prompt = f\"Write a profound and thought provoking quote about {topic}. Provide only the quote, nothing else.\"\n",
     "\n",
     "if MODEL_TYPE in [\"SmolLM2\", \"Qwen\"]:\n",
     "    prompt = f\"<|im_start|>system\\n{system_prompt}<|im_end|>\\n<|im_start|>user\\n{user_prompt}<|im_end|>\\n<|im_start|>assistant\\n\"\n",
