Cleanup in preparation of video recording
Model folder is already in place, with a little README

Update README.md with additional instructions for installation

Update Miniconda instructions

Update description how to run dfx commands

Upgrade to latest version of llama_cpp_canister

Patch ic_py_canister to work with PocketIC, which has no replica_port

.

.

.

Upgrade to llama_cpp_canister v0.3.1

Remove motoko oc bot

Small update to README

Small update for dfx installation

no more tabulate

.

--- a/scripts/images.ipynb
+++ b/scripts/images.ipynb
@@ -25,13 +25,17 @@
     "# IMAGE_NAME = \"IConfucius\"\n",
     "# IMAGE_EXT = \"jpg\"\n",
     "\n",
-    "# IMAGE_DIR = \"../images/IConfucius-agent\"\n",
-    "# IMAGE_NAME = \"IConfucius-agent\"\n",
-    "# IMAGE_EXT = \"webp\"\n",
+    "IMAGE_DIR = \"../images/IConfucius-agent\"\n",
+    "IMAGE_NAME = \"IConfucius-agent\"\n",
+    "IMAGE_EXT = \"webp\"\n",
     "\n",
     "# IMAGE_DIR = \"../images/IConfucius-agent\"\n",
     "# IMAGE_NAME = \"IConfucius-agent\"\n",
     "# IMAGE_EXT = \"jpg\"\n",
+    "\n",
+    "# IMAGE_DIR = \"../images/IConfucius-agent\"\n",
+    "# IMAGE_NAME = \"IConfucius-agent-ghibli\"\n",
+    "# IMAGE_EXT = \"png\"\n",
     "\n",
     "# IMAGE_DIR = \"../images/IConfucius-agent-banner\"\n",
     "# IMAGE_NAME = \"IConfucius-agent-banner\"\n",
@@ -41,9 +45,9 @@
     "# IMAGE_NAME = \"IConfucius-banner\"\n",
     "# IMAGE_EXT = \"webp\"\n",
     "\n",
-    "IMAGE_DIR = \"../images/StefanB\"\n",
-    "IMAGE_NAME = \"pfp-glasses\"\n",
-    "IMAGE_EXT = \"png\"\n",
+    "# IMAGE_DIR = \"../images/StefanB\"\n",
+    "# IMAGE_NAME = \"pfp-glasses\"\n",
+    "# IMAGE_EXT = \"png\"\n",
     "\n",
     "IMAGE_INPUT_FILE = f\"{IMAGE_DIR}/{IMAGE_NAME}.{IMAGE_EXT}\"\n",
     "\n",
@@ -51,9 +55,11 @@
     "IMAGE_OUTPUT_FILE = f\"{IMAGE_DIR}/{IMAGE_NAME}.jpg\"\n",
     "\n",
     "# Create thumbnail of a target file size\n",
-    "THUMBNAIL_KB = 200\n",
+    "THUMBNAIL_KB = 150\n",
+    "# THUMBNAIL_KB = 200\n",
     "THUMBNAIL_FILE = f\"{IMAGE_DIR}/{IMAGE_NAME}-{THUMBNAIL_KB}kb.jpg\"\n",
-    "THUMBNAIL_WIDTH = 200  # Optional width of the thumbnail"
+    "THUMBNAIL_WIDTH = None  # Optional width of the thumbnail\n",
+    "# THUMBNAIL_WIDTH = 200  # Optional width of the thumbnail"
    ]
   },
   {
