--- a/scripts/prompt-design-chinese.ipynb
+++ b/scripts/prompt-design-chinese.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
     "\n",
     "# https://huggingface.co/tensorblock/gpt2-GGUF (124M)\n",
     "# MODEL_TYPE = \"gpt2\"\n",
-    "# MODEL = \"../llms/llama_cpp_canister/models/tensorblock/gpt2-GGUF/gpt2-Q8_0.gguf\"\n",
+    "# MODEL = \"../llms/models/tensorblock/gpt2-GGUF/gpt2-Q8_0.gguf\"\n",
     "# cache_type_k = \"f16\"\n",
     "\n",
     "# ------------------------------------------------------------------------------------------\n",
@@ -427,11 +427,11 @@
     "\n",
     "# https://huggingface.co/Qwen/Qwen2.5-0.5B-Instruct-GGUF\n",
     "# MODEL_TYPE = \"Qwen\"\n",
-    "# MODEL = \"../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q4_k_m.gguf\"\n",
+    "# MODEL = \"../llms/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q4_k_m.gguf\"\n",
     "# cache_type_k = \"f16\"\n",
     "\n",
     "MODEL_TYPE = \"Qwen\"\n",
-    "MODEL = \"../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf\"\n",
+    "MODEL = \"../llms/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf\"\n",
     "cache_type_k = \"q8_0\"\n",
     "\n",
     "\n",
@@ -440,7 +440,7 @@
     "\n",
     "# https://huggingface.co/unsloth/Llama-3.2-1B-Instruct-GGUF\n",
     "# MODEL_TYPE = \"Llama-3.2\"\n",
-    "# MODEL = \"../llms/llama_cpp_canister/models/unsloth/Llama-3.2-1B-Instruct-GGUF/Llama-3.2-1B-Instruct-Q4_K_M.gguf\"\n",
+    "# MODEL = \"../llms/models/unsloth/Llama-3.2-1B-Instruct-GGUF/Llama-3.2-1B-Instruct-Q4_K_M.gguf\"\n",
     "# cache_type_k = \"q5_0\"\n",
     "\n",
     "# ------------------------------------------------------------------------------------------\n",
