--- a/scripts/prompt-design-english.ipynb
+++ b/scripts/prompt-design-english.ipynb
@@ -95,7 +95,7 @@
       "nothing else.<|im_end|> <|im_start|>assistant\n",
       "\n",
       "Command:\n",
-      " ../../ggml_org_llama_615212.cpp/build/bin/llama-cli -m ../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf --no-warmup -no-cnv -sp -n 1024 --seed 4741296 --temp 0.7 --repeat-penalty 1.1 --cache-type-k q8_0 -p '<|im_start|>system\\nYou are Confucius, the ancient philosopher. You finish quotes in a profound and compassionate manner.<|im_end|>\\n<|im_start|>user\\nWrite a profound and thought provoking quote about Discipline. Provide only the quote, nothing else.<|im_end|>\\n<|im_start|>assistant\\n'\n"
+      " ../../ggml_org_llama_615212.cpp/build/bin/llama-cli -m ../llms/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf --no-warmup -no-cnv -sp -n 1024 --seed 4741296 --temp 0.7 --repeat-penalty 1.1 --cache-type-k q8_0 -p '<|im_start|>system\\nYou are Confucius, the ancient philosopher. You finish quotes in a profound and compassionate manner.<|im_end|>\\n<|im_start|>user\\nWrite a profound and thought provoking quote about Discipline. Provide only the quote, nothing else.<|im_end|>\\n<|im_start|>assistant\\n'\n"
      ]
     },
     {
@@ -106,7 +106,7 @@
       "main: llama backend init\n",
       "main: load the model and apply lora adapter, if any\n",
       "llama_model_load_from_file_impl: using device Metal (AMD Radeon Pro 5500M) - 4080 MiB free\n",
-      "llama_model_loader: loaded meta data with 26 key-value pairs and 291 tensors from ../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf (version GGUF V3 (latest))\n",
+      "llama_model_loader: loaded meta data with 26 key-value pairs and 291 tensors from ../llms/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf (version GGUF V3 (latest))\n",
       "llama_model_loader: Dumping metadata keys/values. Note: KV overrides do not apply in this output.\n",
       "llama_model_loader: - kv   0:                       general.architecture str              = qwen2\n",
       "llama_model_loader: - kv   1:                               general.type str              = model\n",
@@ -420,7 +420,7 @@
     "\n",
     "# https://huggingface.co/tensorblock/gpt2-GGUF (124M)\n",
     "# MODEL_TYPE = \"gpt2\"\n",
-    "# MODEL = \"../llms/llama_cpp_canister/models/tensorblock/gpt2-GGUF/gpt2-Q8_0.gguf\"\n",
+    "# MODEL = \"../llms/models/tensorblock/gpt2-GGUF/gpt2-Q8_0.gguf\"\n",
     "# cache_type_k = \"f16\"\n",
     "\n",
     "# ------------------------------------------------------------------------------------------\n",
@@ -428,11 +428,11 @@
     "\n",
     "# https://huggingface.co/Qwen/Qwen2.5-0.5B-Instruct-GGUF\n",
     "# MODEL_TYPE = \"Qwen\"\n",
-    "# MODEL = \"../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q4_k_m.gguf\"\n",
+    "# MODEL = \"../llms/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q4_k_m.gguf\"\n",
     "# cache_type_k = \"f16\"\n",
     "\n",
     "MODEL_TYPE = \"Qwen\"\n",
-    "MODEL = \"../llms/llama_cpp_canister/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf\"\n",
+    "MODEL = \"../llms/models/Qwen/Qwen2.5-0.5B-Instruct-GGUF/qwen2.5-0.5b-instruct-q8_0.gguf\"\n",
     "cache_type_k = \"q8_0\"\n",
     "\n",
     "\n",
@@ -441,7 +441,7 @@
     "\n",
     "# https://huggingface.co/unsloth/Llama-3.2-1B-Instruct-GGUF\n",
     "# MODEL_TYPE = \"Llama-3.2\"\n",
-    "# MODEL = \"../llms/llama_cpp_canister/models/unsloth/Llama-3.2-1B-Instruct-GGUF/Llama-3.2-1B-Instruct-Q4_K_M.gguf\"\n",
+    "# MODEL = \"../llms/models/unsloth/Llama-3.2-1B-Instruct-GGUF/Llama-3.2-1B-Instruct-Q4_K_M.gguf\"\n",
     "# cache_type_k = \"q5_0\"\n",
     "\n",
     "# ------------------------------------------------------------------------------------------\n",
